Add some broken code:

--- a/style.css
+++ b/style.css
@@ -55,4 +55,4 @@ body{
     justify-content: space-between; /* Distribute space evenly between items */
     width: 70%;
 }
-/* hero section */
+/* image gallary section */
